# sim-labs

./: MANIFEST.in  README.md  pixi.toml  pyproject.toml
src/nuremics_labs/: system.py
src/nuremics_labs/apps/general/DEMO_APP/: README.md  app.yaml
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/: README.md  __init__.py  app.yaml  system.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/: __init__.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/AnalysisProc/: README.md  __init__.py  item.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/AnalysisProc/ops/: __init__.py  units.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/GeometryProc/: README.md  __init__.py  item.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/GeometryProc/ops/: __init__.py  units.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/LabelingProc/: README.md  __init__.py  item.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/MeshProc/: README.md  __init__.py  item.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/ModelProc/: README.md  __init__.py  item.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/PostProc/: README.md  __init__.py  item.py
src/nuremics_labs/apps/simulation/CANTILEVER_SHEAR_APP/procs/SolverProc/: README.md  __init__.py  item.py
src/nuremics_labs/ops/general/projectile_model/: units.py
src/nuremics_labs/ops/general/trajectory_analysis/: units.py
src/nuremics_labs/procs/general/TrajectoryAnalysisProc/: item.py
(+11 files in other folders)
