[project]
name = "sim-labs"
version = "1.0.0"
description = "Laboratory of applications developed with the nuRemics framework."
authors = [
  { name = "Julien SIGUENZA", email = "contact@julien-siguenza.com" },
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
  "LICENSE",
  "LICENSE_TRADEMARK",
]
dependencies = [
  "nuremics @ git+https://github.com/nuremics/nuremics.git@main"
]

[project.urls]
homepage = "https://nuremics.github.io"
repository = "https://github.com/nuremics/sim-labs"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]